--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,10 @@
 # Folders:
 /resume
+/Versions_website
+
+# Specifc files:
+/images/content/qPCRLeishmania_new.pzfx
+/images/content/qPCRLeishmania_new.pzfx
+/images/content/keynote.key
+
+/images/logo/formattingLogos.pzfx
